--- a/map.html
+++ b/map.html
@@ -300,7 +300,7 @@
     padding: 0;
     overflow: hidden;
     z-index: 10;
-    height: 80%;
+    height: 900px;
   "></iframe>
 
 <div class="section">
