--- a/_static/map/index.html
+++ b/_static/map/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Using OpenLayers with Vite</title>
+    <title>NFETRA Map</title>
     
     <style>
       .map {
@@ -16,23 +16,18 @@
         height: 400px;
         margin-top: 410px;
       }
-      body {
-          padding: 0;
-          margin: 0;
-      }
-
       html, body {
-          height: 50%;
-          font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
+          margin: 0;
+          padding: 0;
       }
     </style>
-    <script type="module" crossorigin src="./map/index-f2062709.js"></script>
-    <link rel="stylesheet" href="./map/index-5c51e096.css">
+    <script type="module" crossorigin src="./index-7a545553.js"></script>
+    <link rel="stylesheet" href="./index-5c51e096.css">
   </head>
   <body>
     <div id="map" class="map"></div>
     
 
-    <p><div id="info"></div></p>
+    <div id="info"></div>
   </body>
 </html>
