--- a/_static/map/index.html
+++ b/_static/map/index.html
@@ -10,7 +10,6 @@
       .halfpage {
         width: 100%;
         height: 500px;
-        color:rgb(134, 134, 134);
       }
       @media (min-width: 400px) {
         .wrapper {
@@ -23,8 +22,8 @@
         }
       }
     </style>
-    <script type="module" crossorigin src="./index-cbebb69c.js"></script>
-    <link rel="stylesheet" href="./index-5c51e096.css">
+    <script type="module" crossorigin src="./map_plugin.js"></script>
+    <link rel="stylesheet" href="./map_plugin.css">
   </head>
   <body>
     <div class="wrapper">
